--- a/AlzApp/AlzApp/Base.lproj/Main.storyboard
+++ b/AlzApp/AlzApp/Base.lproj/Main.storyboard
@@ -349,8 +349,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person_qm" translatesAutoresizingMaskIntoConstraints="NO" id="He0-La-jWr">
-                                <rect key="frame" x="132" y="106" width="150" height="150"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mic.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="He0-La-jWr">
+                                <rect key="frame" x="132" y="105.5" width="150" height="150"/>
+                                <color key="tintColor" systemColor="labelColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="4VW-Sh-A7R"/>
                                     <constraint firstAttribute="height" constant="150" id="hU6-qe-IwM"/>
@@ -459,7 +460,7 @@
         <image name="gobackward.10" catalog="system" width="121" height="128"/>
         <image name="goforward.10" catalog="system" width="121" height="128"/>
         <image name="largecircle.fill.circle" catalog="system" width="128" height="121"/>
-        <image name="person_qm" width="512" height="512"/>
+        <image name="mic.fill" catalog="system" width="108" height="128"/>
         <image name="play" catalog="system" width="120" height="128"/>
         <image name="plus.app" catalog="system" width="128" height="114"/>
         <systemColor name="labelColor">
